# cmake

./: .gitignore  BarcodeReader.cxx  CMakeLists.txt  README.md
